--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -354,6 +354,13 @@ h5 {
     right:0;
     bottom:0;
   }
+  .page-work & {
+    position: fixed;
+    overflow:hidden;
+    left:0;
+    right:0;
+    bottom:0;
+  }
 
 }
 
