--- a/_themes/24hl/layouts/work.html
+++ b/_themes/24hl/layouts/work.html
@@ -23,7 +23,7 @@
     <link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon.png" }}">
     <link href='http://fonts.googleapis.com/css?family=Oxygen:300,400,700' rel='stylesheet' type='text/css'>
   </head>
-  <body id="top" class="page-{{segment_1}}">
+  <body id="top" class="page-work">
 
     <header class="header">
       <div class="container">
