added actual content.

--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -61,7 +61,7 @@
   <li class="column-item">
 		<div>
 			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+				Hello, I'm Jarrod and I'm the director.
 			</p>
 		</div>
 		<div class="align-center jarrods-face">
@@ -71,7 +71,7 @@
 	<li class="column-item">
 		<p>
 			<b>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
+				24hour lime is Digital Design. Print, web, mobile, and other things. <br><br>Religion: The united church of UX focused design
 			</b>
 		</p>
 	</li>
