--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2940,7 +2940,7 @@ h5 {
 }
 .column-item {
   padding: 20px 10px 20px;
-  line-height: 12px;
+  line-height: 14px;
   color: #000;
   font-weight: 100;
   font-size: 12px;
@@ -3016,9 +3016,9 @@ h5 {
   border: 1px solid red;
 }
 .column-dark {
-  line-height: 12px;
+  line-height: 14px;
   padding-bottom: 50px;
-  color: #ffffff;
+  color: #eeeeee;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
