--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -527,6 +527,42 @@ h5 {
   font-size: 12px;
   text-align: left;
   border: 1px solid red;
+  min-width: 350px;
+  max-width: 350px;
+
+
+
+  &.column-no-padding {
+    padding:0;
+
+    img {
+      width: 100% !important;
+    }
+  }
+
+  .flex-4-column & {
+    width: 25%;
+    }
+
+  .flex-2-column & {
+    width: 50%;
+  }
+  .flex-1-column & {
+    width: 100%;
+  }
+
+}
+
+.column-item-header {
+  padding:20px 10px 20px;
+  line-height: 14px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+  border: 1px solid red;
+  
+
 
 
   &.column-no-padding {
