--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -7,7 +7,7 @@
 		<ul class="flex-container">
 			<li class="block-item">
 				<div class="verticalline"></div>
-				<a href="/Work">
+				<a href="http://24hourlime.com.au/portfolio/">
 					<div class="boldnumbers">
 						<b>01</b>
 						<div class="homenav">WORK</div>
@@ -27,7 +27,7 @@
 
 			<li class="block-item">
 				<div class="verticalline"></div>
-				<a href="/Journal">
+				<a href="http://24hourlime.com.au/portfolio/journal/">
 					<div class="boldnumbers">
 						<b>03</b>
 						<div class ="homenav">JOURNAL</div>
@@ -51,17 +51,17 @@
 
 
 <ul class="flex-column flex-2-column">
-	<li class="column-item">
+	<li class="column-item-header">
 		<h2 id="About" class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
 	</li>
-	<li class="column-item"></li>
+	<li class="column-item-header"></li>
 </ul>
 
 <ul class="flex-column flex-4-column">
   <li class="column-item">
 		<div>
 			<p>
-				Hello, I'm Jarrod and I'm the founder of 24HL.
+				Hello, I'm Jarrod and I design things.
 			</p>
 		</div>
 		<div class="align-center jarrods-face">
@@ -146,10 +146,10 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 
 
 	<ul class="flex-column flex-2-column">
-		<li class="column-item">
+		<li class="column-item-header">
 			<h2 id="Contact" class="flex-page-header">LET'S WORK TOGETHER</h2>
 		</li>
-		<li class="column-item"></li>
+		<li class="column-item-header"></li>
 	</ul>
 
 	<ul class="flex-column flex-4-column">
