--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -50,18 +50,21 @@
 
 
 
-<ul class="flex-column flex-2-column">
-	<li class="column-item-header">
-		<h2 id="About" class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+<ul class="flex-column flex-4-column">
+	<li class="column-item">
+		<h2 id="About" class="page-header-2">DIGITAL DESIGN</h2>
 	</li>
-	<li class="column-item-header"></li>
+	<li class="column-item"></li>
+	<li class="column-item"></li>
+	<li class="column-item"></li>
+
 </ul>
 
 <ul class="flex-column flex-4-column">
   <li class="column-item">
 		<div>
 			<p>
-				Hello, I'm Jarrod and I design things.
+				Hello, I'm Jarrod and I make things. I have a passion for design and a partcular interest in beautiful user interfaces.
 			</p>
 		</div>
 		<div class="align-center jarrods-face">
@@ -89,20 +92,32 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 	</li>
 	<li class="column-item column-no-padding">
 		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
+			<a href="http://24hourlime.com.au/portfolio/2015/08/21/responsive-web-design-2/">
+				<img src="/assets/img/Think-Site-Devices-Mockup-web.jpg" alt="think corporate site" height="220">
+			</a>
+			<a href="http://24hourlime.com.au/portfolio/2015/08/17/typography/">
+				<img src="/assets/img/type_artwork_adele.jpg" alt="typography" height="220">
+			</a>
 		</p>
 	</li>
 	<li class="column-item column-no-padding">
 		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
+			<a href="http://24hourlime.com.au/portfolio/2015/08/17/io-agency-branding-3/">
+				<img src="/assets/img/branding-mockup.jpg" alt="i/o branding" height="220">
+			</a>
+			<a href="http://24hourlime.com.au/portfolio/2015/08/17/elc-sites/">
+				<img src="/assets/img/elc-site-mockup.jpg" alt="elc site design" height="220">
+			</a>
 		</p>
 	</li>
 	<li class="column-item column-no-padding">
 		<p>
-			<img src="/assets/img/about-1.jpg" alt="domoto logo" height="220">
-			<img src="/assets/img/about-2.jpg" alt="domoto logo" height="220">
+			<a href="http://24hourlime.com.au/portfolio/2015/09/03/mobile-uiux/">
+				<img src="/assets/img/v3_mockup_red1.jpg" alt="mobile ui design" height="220">
+			</a>
+			<a href="http://24hourlime.com.au/portfolio/2015/08/17/early-learning-centre-branding/">
+				<img src="/assets/img/loyalty-card-mockup-web.jpg" alt="loyalty cards" height="220">
+			</a>
 		</p>
 	</li>
 </ul>
@@ -132,9 +147,9 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 	<div class="journal-nav">
 	  <nav class="block-navigation">
 	    <ul class="nav nav-dark" role="navigation">
-	      <li><a href="/Work">WORK</a>
+	      <li><a href="http://24hourlime.com.au/portfolio/">WORK</a>
 				<li><a data-scroll href="#About">ABOUT</a>
-				<li><a href="/Journal">JOURNAL</a>
+				<li><a href="http://24hourlime.com.au/portfolio/journal/">JOURNAL</a>
 				<li><a data-scroll href="#Contact">CONTACT</a>
 				</li>
 	    </ul>
@@ -145,11 +160,13 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 
 
 
-	<ul class="flex-column flex-2-column">
-		<li class="column-item-header">
-			<h2 id="Contact" class="flex-page-header">LET'S WORK TOGETHER</h2>
+	<ul class="flex-column flex-4-column">
+		<li class="column-item">
+			<h2 id="Contact" class="page-header-2">LET'S WORK TOGETHER</h2>
 		</li>
-		<li class="column-item-header"></li>
+		<li class="column-item"></li>
+		<li class="column-item"></li>
+		<li class="column-item"></li>
 	</ul>
 
 	<ul class="flex-column flex-4-column">
