--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -122,7 +122,25 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 	</li>
 </ul>
 
-<div class="page-seperator"></div>
+
+
+
+<ul class="flex-column-seperator">
+	<li class="column-item column-no-padding-left">
+	<div class="page-seperator"></div>
+	</li>
+	<li class="column-item column-no-padding">
+	<div class="page-seperator"></div>
+	</li>
+	<li class="column-item column-no-padding">
+	<div class="page-seperator"></div>
+	</li>
+	<li class="column-item column-no-padding-right">
+	<div class="page-seperator"></div>
+	</li>
+
+</ul>
+
 
 <ul class="flex-column flex-4-column">
 	<li class="column-item">
