--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -270,6 +270,7 @@ h5 {
 
 .page-header-2 {
   padding: 0;
+  margin-top: 45px;
   line-height: 18px;
   color: @color-orange;
   font-weight: 700;
@@ -385,9 +386,21 @@ h5 {
 
 .page-seperator {
   border-bottom: 1px solid;
-  color: #000;
-  padding: 10px 30px;
+  color: #999999;
+  padding: 10px 10px;
   margin-top: 20px;
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-grow: 1;
+
+
+
+  -webkit-flex-flow: row nowrap;
+
 }
 
 .page-seperator-dark {
@@ -439,7 +452,7 @@ h5 {
 
   -webkit-flex-flow: row wrap;
   justify-content: flex-start;
-  //border: 1px solid red;
+  border: 1px solid red;
 
   p {
     margin:0;
@@ -507,12 +520,13 @@ h5 {
     justify-content: flex-start;
     flex-flow: row wrap;
   }
+
 }
 
-.flex-column-blog {
+.flex-column-seperator {
   padding: 0;
-  margin-left: 0px;
-  margin-right: 0px;
+  margin-left: 40px;
+  margin-right: 40px;
   margin-bottom: 10px;
   list-style: none;
   display: flex;
@@ -525,13 +539,17 @@ h5 {
   display: flex;
 
   -webkit-flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   border: 1px solid red;
 
   p {
     margin:0;
   }
 
+  @media (max-width: @screen-xs-max) {
+    justify-content: flex-start;
+    flex-flow: row nowrap;
+  }
 }
 
 .column-item {
@@ -554,6 +572,19 @@ h5 {
       width: 100% !important;
     }
   }
+
+  &.column-no-padding-left {
+    padding-left: 10px;
+    padding-right: 0px;
+
+  }
+
+  &.column-no-padding-right {
+    padding-left: 0px;
+    
+
+  }
+
 
   .flex-4-column & {
     width: 25%;
