--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2717,11 +2717,21 @@ h5 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 1100px;
+  height: 1000px;
+}
+@media (max-width: 1199px) {
+  .contact-background {
+    height: 800px;
+  }
+}
+@media (max-width: 991px) {
+  .contact-background {
+    height: 800px;
+  }
 }
 @media (max-width: 767px) {
   .contact-background {
-    height: 1500px;
+    height: 1100px;
   }
 }
 .contact-background .container {
@@ -2891,7 +2901,6 @@ h5 {
   display: flex;
   -webkit-flex-flow: row wrap;
   justify-content: flex-start;
-  border: 1px solid red;
 }
 .flex-container p {
   margin: 0;
@@ -2909,7 +2918,6 @@ h5 {
   display: flex;
   -webkit-flex-direction: row;
   justify-content: flex-start;
-  border: 1px solid red;
 }
 .flex-wrap p {
   margin: 0;
@@ -2928,7 +2936,6 @@ h5 {
   display: flex;
   -webkit-flex-direction: row;
   justify-content: center;
-  border: 1px solid red;
 }
 .flex-column p {
   margin: 0;
@@ -2962,11 +2969,22 @@ h5 {
   display: -webkit-flex;
   display: flex;
   -webkit-flex-direction: row;
-  justify-content: flex-start;
-  border: 1px solid red;
+  justify-content: center;
 }
 .flex-column-seperator p {
   margin: 0;
+}
+@media (max-width: 1199px) {
+  .flex-column-seperator {
+    justify-content: flex-start;
+    flex-flow: row nowrap;
+  }
+}
+@media (max-width: 991px) {
+  .flex-column-seperator {
+    justify-content: flex-start;
+    flex-flow: row nowrap;
+  }
 }
 @media (max-width: 767px) {
   .flex-column-seperator {
@@ -2981,7 +2999,6 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
   min-width: 300px;
   max-width: 300px;
 }
@@ -2997,6 +3014,7 @@ h5 {
 }
 .column-item.column-no-padding-right {
   padding-left: 0px;
+  padding-right: 0px;
 }
 .flex-4-column .column-item {
   width: 25%;
@@ -3014,7 +3032,6 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
   width: 25%;
 }
 .journal-item {
@@ -3024,7 +3041,6 @@ h5 {
   font-weight: 100;
   font-size: 12px;
   text-align: left;
-  border: 1px solid red;
   width: 75%;
 }
 .flexgrow {
@@ -3052,13 +3068,11 @@ h5 {
   padding-top: 80px;
   padding-left: 0;
   text-align: left;
-  border: 1px solid red;
 }
 .pagination-next {
   padding-top: 80px;
   padding-right: 0;
   text-align: right;
-  border: 1px solid red;
 }
 .column-dark {
   line-height: 14px;
