--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -74,7 +74,7 @@
 	<li class="column-item">
 		<p>
 			<b>
-				24hour lime is Digital Design. Print, web, mobile, devices, other things. <br><br>Religion: The united church of UX focused design
+				24hour lime is Digital Design. Web, mobile, devices, other things. <br><br>Religion: The united church of UX focused design
 			</b>
 		</p>
 	</li>
@@ -84,10 +84,10 @@
 </ul>
 <ul class="flex-column flex-4-column">
 	<li class="column-item">
-		<p>Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
-Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. <br><br>Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
-		Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.<br><br>
-		Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum.
+		<p>I am a freelance designer and I work under the name 24hour lime. I got established mid-2014 and have been working with clients, trying to deliver the best possible designs ever since. Every day I get to learn new things while making people happy. What else could you ask for?<br><br>
+To me, design is more than just communication or aesthetics - it is the examination and understanding of a problem, then coming up with a solution that fits within the given criteria and requirements. It provides functionality, has the user experience at the forefront, and also excites or delights. Design makes clients money, and changes how we live. That is a powerful thing.<br><br>
+My focus is on UX-based design and my passion is UI. Give me the chance to design a new interface for a device or for the web and I'll happily run with it. <br><br>
+If you are looking to hire a designer, get in touch. If it is an interesting or socially beneficial project, or you are a not-for-profit or charity, the quote may be very cheap (hint: free!).
 		</p>
 	</li>
 	<li class="column-item column-no-padding">
@@ -145,14 +145,16 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 <ul class="flex-column flex-4-column">
 	<li class="column-item">
 		<p>
-			<b>logo logo logo logo</b>
+			<img src="/assets/img/logo_light_grey_watermark_style.png" alt="24hl logo" height="50">
+			<img src="/assets/img/logo-m@2x.png" alt="24hl logo" hspace="30" height="30">
+			<img src="/assets/img/statamiclogo.jpg" alt="statamic logo" height="50">
 		</p>
 		<br>
 	</li>
-	<li class="column-item">
+	<li class="column-item column-no-padding">
 		<p>
 			<b>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio.
+				If you like coffee and would like to catch up to chat about a project or need designer to help build your product, contact me below. I work out of an office in Brunswick East, Victoria, Australia.
 				<br><br><br><br><br><br><br><br><br><br>
 			</b>
 		</p>
@@ -190,10 +192,11 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 	<ul class="flex-column flex-4-column">
 
 	  <li class="column-item column-dark">
-			<p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. </b><br><br>
-			Lorem ipsum dolor sit amet, Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. <br><br>Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
-			Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. Morbi mattis metus ut tempor interdum. Nunc diam mi, sodales imperdiet pellentesque ut, pretium vel justo. Aenean imperdiet lectus quam, in venenatis urna scelerisque vel. <br><br>Suspendisse ac massa at quam sagittis facilisis sit amet id turpis. Aenean luctus nisl sit amet lectus tempus gravida id ac tellus. Mauris dapibus magna enim, eget elementum arcu eleifend id. Proin ac nunc non dui hendrerit semper. Nam pharetra tortor vitae orci ullamcorper eleifend. Proin porttitor lectus quis urna tempor, et eleifend lacus ornare. Mauris non vulputate est.
-			Lorem ipsum dolor sit amet, Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque.
+			<p><b>See that just over there? That's a form. Everyone loves forms! Why not fill your details and hit the orange button? </b><br><br>
+			Starting a new business and need a logo, branding, and a responive website? Got an idea for a mobile app? Need help turning your ideas into something visual and beautiful? <br><br>
+			You've come to the right place. Contact me via the form to the right or even just send me an <a href="mailto:info@24hourlime.com.au">email</a> and I'll provide you with a quote.
+			I also work closely with front end and iOS developers, so can build your entire product - from strategy and research to wireframes and user stories, from low-fidelity designs to high-def prototypes. <br><br>
+
 			</p>
 		</li>
 		<li class="column-item column-dark">
@@ -235,14 +238,14 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 					<div class="form-group">
 						<label for="name" class="col-sm-3 control-label">Name</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="text" id="firstname" name="firstname" placeholder="First Name" value="" />
+							<input class="form-control" type="text" id="firstname" name="firstname" placeholder="Name" value="" />
 						</div>
 					</div>
 
 					<div class="form-group">
 						<label for="name" class="col-sm-3 control-label">Company</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="text" id="surname" name="surname" placeholder="Surname" value="" />
+							<input class="form-control" type="text" id="surname" name="surname" placeholder="Company" value="" />
 						</div>
 					</div>
 
@@ -256,7 +259,7 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 					<div class="form-group">
 						<label for="name" class="col-sm-3 control-label">Phone</label>
 						<div class="col-sm-9">
-							<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Postcode" value="" />
+							<input class="form-control" type="text" id="postcode" name="postcode" placeholder="Phone" value="" />
 						</div>
 					</div>
 
