--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -235,7 +235,7 @@ h5 {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 1000px;
+  height: 800px;
 
   @media (max-width: @screen-md-max) {
   height: 800px;
@@ -328,6 +328,11 @@ h5 {
   margin:0;
   font-size:12px;
   letter-spacing: 3px;
+
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 .row-fifths > div {
   width:20%;
