--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -71,7 +71,7 @@
 			<img src="/_themes/24hl/img/portrait.jpg" alt="me smiling!">
 		</div>
 	</li>
-	<li class="column-item">
+	<li class="column-item column-no-padding">
 		<p>
 			<b>
 				24hour lime is Digital Design. Web, mobile, devices, other things. <br><br>Religion: The united church of UX focused design
