--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -116,6 +116,8 @@ img {
   }
 }
 
+
+
 .nav-dark {
   padding-top: 25px;
   margin: 0 auto;
@@ -318,6 +320,12 @@ h5 {
     color:#fff;
     text-decoration: none;
   }
+
+  &:hover {
+    color: #ed9a45;
+    text-decoration: none;
+  }
+
 }
 .homenav {
   color: #fff;
@@ -330,7 +338,7 @@ h5 {
   letter-spacing: 3px;
 
   &:hover {
-    color: #fff;
+    color: #ed9a45;
     text-decoration: none;
   }
 }
