--- a/_themes/24hl/src/less/bootstrap/variables.less
+++ b/_themes/24hl/src/less/bootstrap/variables.less
@@ -36,7 +36,7 @@
 //** Link hover color set via `darken()` function.
 @link-hover-color:      darken(@link-color, 15%);
 //** Link hover decoration.
-@link-hover-decoration: underline;
+@link-hover-decoration: none;
 
 
 //== Typography
