--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -70,6 +70,10 @@ img {
   }
 }
 
+a, a:active, a:focus {
+outline: none;
+}
+
 .nav-main {
   margin: 0;
   margin-bottom: 50px;
@@ -319,12 +323,14 @@ h5 {
   a {
     color:#fff;
     text-decoration: none;
+
   }
 
   &:hover {
-    color: #ed9a45;
+    color: #fff;
     text-decoration: none;
   }
+
 
 }
 .homenav {
@@ -340,6 +346,7 @@ h5 {
   &:hover {
     color: #ed9a45;
     text-decoration: none;
+
   }
 }
 .row-fifths > div {
