--- a/_themes/24hl/src/less/bootstrap/variables.less
+++ b/_themes/24hl/src/less/bootstrap/variables.less
@@ -424,8 +424,8 @@
 @nav-tabs-active-link-hover-color:          @gray;
 @nav-tabs-active-link-hover-border-color:   #ddd;
 
-@nav-tabs-justified-link-border-color:            #ddd;
-@nav-tabs-justified-active-link-border-color:     @body-bg;
+@nav-tabs-justified-link-border-color:            none;
+@nav-tabs-justified-active-link-border-color:     none;
 
 //== Pills
 @nav-pills-border-radius:                   @border-radius-base;
